<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/text_general" app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:key="move_items"
            app:title="@string/text_move_items"
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            />

        <SwitchPreferenceCompat
            app:key="show_summary"
            app:title="@string/text_show_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            />

        <SwitchPreferenceCompat
            app:key="screen_awake"
            app:title="@string/text_screen_awake"
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            />

    </PreferenceCategory>



</PreferenceScreen>