<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:focusableInTouchMode="true"
    >

    <FrameLayout
        android:id="@+id/fl_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_item_default"
            />
        
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_edit"
            app:fabCustomSize="40dp"
            android:layout_gravity="right"
            android:clickable="true"
            android:focusable="true"
            android:id="@+id/fab_category"
            android:backgroundTint="@color/lightGreen"
            />

    </FrameLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fl_icon"
        android:layout_marginTop="22dp"
        style="@style/TextInputLayoutStyle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_item_name"
            android:imeOptions="actionNext"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/darkGray"
            android:selectAllOnFocus="true"
            android:focusable="true"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_quantity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@+id/til_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/til_unit"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="12dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_item_quantity"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:maxLines="1"
            android:textColor="@color/darkGray"
            android:selectAllOnFocus="true"
            android:focusable="true"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_unit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_description"
        app:layout_constraintStart_toEndOf="@+id/til_quantity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginStart="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_marginTop="12dp"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_item_unit"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:textColor="@color/darkGray"
            android:selectAllOnFocus="true"
            android:focusable="true"
            android:drawableEnd="@drawable/ic_drop_down"
            android:drawableTint="@color/darkGray"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/til_quantity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <EditText
            android:id="@+id/et_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_item_price"
            android:imeOptions="actionNext"
            android:inputType="numberDecimal"
            android:textColor="@color/darkGray"
            android:selectAllOnFocus="true"
            android:focusable="true"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        app:layout_constraintTop_toBottomOf="@id/til_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

        <EditText
            android:id="@+id/et_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_item_notes"
            android:maxLines="2"
            android:inputType="textCapCharacters"
            android:textColor="@color/darkGray"
            android:imeOptions="actionDone"
            android:selectAllOnFocus="true"
            android:focusable="true"
            android:textColorHint="@color/lightGray"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/til_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="22dp"
        android:text="@string/text_save"
        />

</androidx.constraintlayout.widget.ConstraintLayout>