<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <LinearLayout
        android:id="@+id/view_item_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:background="@color/lightGray"
        android:padding="16dp"
        >

        <AutoCompleteTextView
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"
            android:maxLines="1"
            android:textColor="@color/darkGray"
            android:selectAllOnFocus="true"
            android:focusable="true"
            android:drawableTint="@color/lightGray"
            android:background="@android:color/white"
            android:textSize="18sp"
            android:padding="8dp"
            android:drawablePadding="4dp"
            android:hint="@string/text_new_item"
            android:textColorHint="@color/lightGray"
            android:completionThreshold="1"
            android:dropDownVerticalOffset="0.5dp"
            android:drawableStart="@drawable/ic_search"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/view_summary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_item_form"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        />

    <ImageView
        android:id="@+id/iv_empty"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_item_default"
        app:layout_constraintBottom_toTopOf="@+id/tv_empty_message_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"></ImageView>

    <TextView
        android:id="@+id/tv_empty_message_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="22dp"
        android:text="@string/msg_empty_list_title"
        android:textAlignment="center"
        android:textColor="@color/lightGray"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_empty_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_empty" />

    <TextView
        android:id="@+id/tv_empty_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/msg_empty_list"
        android:textAlignment="center"
        android:textColor="@color/lightGray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_empty_message_title" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gp_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="iv_empty,tv_empty_message_title,tv_empty_message">

    </androidx.constraintlayout.widget.Group>


    <ProgressBar
        android:id="@+id/pb_status"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        app:layout_constraintBottom_toTopOf="@+id/view_summary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="?android:attr/progressBarStyleHorizontal"
        android:max="100"
        android:progress="100"
        />

    <LinearLayout
        android:id="@+id/view_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal"
        android:background="@color/darkGreen"
        android:padding="18dp"
        android:gravity="center"
        >

        <!-- Count -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            >

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/ic_check_circle"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_items"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    />

                <TextView
                    android:id="@+id/tv_items_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0/0"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    />

            </LinearLayout>

        </LinearLayout>

        <!-- Total -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1"
            >

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/ic_monetization"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_total"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    />

                <TextView
                    android:id="@+id/tv_items_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="R$ 0,00"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
